--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,3 +12,6 @@ add_executable(P1164 P1164.cpp)
 add_executable(P4017 P4017.cpp)
 add_executable(P1434 P1434.cpp)
 add_executable(P1216 P1216.cpp)
+add_executable(P1802 P1802.cpp)
+add_executable(P1049 P1049.cpp)
+add_executable(P1077 P1077.cpp)
