--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,3 +15,6 @@ add_executable(P1216 P1216.cpp)
 add_executable(P1802 P1802.cpp)
 add_executable(P1049 P1049.cpp)
 add_executable(P1077 P1077.cpp)
+add_executable(P3842 P3842.cpp)
+add_executable(P2249 P2249.cpp)
+add_executable(B3627 B3627.cpp)
