--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,3 +25,7 @@ add_executable(P2678 P2678.cpp)
 add_executable(P3853 P3853.cpp)
 add_executable(P1182 P1182.cpp)
 add_executable(P3743 P3743.cpp)
+add_executable(P1036 P1036.cpp)
+add_executable(P2089 P2089.cpp)
+add_executable(P1088 P1088.cpp)
+add_executable(P1149 P1149.cpp)
