--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,3 +29,6 @@ add_executable(P1036 P1036.cpp)
 add_executable(P2089 P2089.cpp)
 add_executable(P1088 P1088.cpp)
 add_executable(P1149 P1149.cpp)
+add_executable(P2036 P2036.cpp)
+add_executable(P1135 P1135.cpp)
+add_executable(P1683 P1683.cpp)
