--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,10 @@ add_executable(P1149 P1149.cpp)
 add_executable(P2036 P2036.cpp)
 add_executable(P1135 P1135.cpp)
 add_executable(P1683 P1683.cpp)
+add_executable(P1596 P1596.cpp)
+add_executable(P1025 P1025.cpp)
+add_executable(p1019 p1019.cpp)
+add_executable(P9471 P9471.cpp)
+add_executable(P9472 P9472.cpp)
+add_executable(P9473 P9473.cpp)
+add_executable(P1746 P1746.cpp)
