--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,8 +34,15 @@ add_executable(P1135 P1135.cpp)
 add_executable(P1683 P1683.cpp)
 add_executable(P1596 P1596.cpp)
 add_executable(P1025 P1025.cpp)
-add_executable(p1019 p1019.cpp)
+add_executable(p1019 P1019.cpp)
 add_executable(P9471 P9471.cpp)
 add_executable(P9472 P9472.cpp)
 add_executable(P9473 P9473.cpp)
 add_executable(P1746 P1746.cpp)
+add_executable(P1443 P1443.cpp)
+add_executable(P1332 P1332.cpp)
+add_executable(P1747 P1747.cpp)
+add_executable(P2385 P2385.cpp)
+add_executable(P1162 P1162.cpp)
+add_executable(P2895 P2895.cpp)
+add_executable(P3395 P3395.cpp)
