--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,3 +47,4 @@ add_executable(P1162 P1162.cpp)
 add_executable(P2895 P2895.cpp)
 add_executable(P3395 P3395.cpp)
 add_executable(P2658 P2658.cpp)
+add_executable(P9548 P9548.cpp)
