--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,3 +48,9 @@ add_executable(P2895 P2895.cpp)
 add_executable(P3395 P3395.cpp)
 add_executable(P2658 P2658.cpp)
 add_executable(P9548 P9548.cpp)
+
+add_executable(P9189 P9189.cpp)
+add_executable(P9186 P9186.cpp)
+add_executable(CF1041C CF1041C.cpp)
+add_executable(P9124 P9124.cpp)
+add_executable(P9125 P9125.cpp)
